--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!-- Normalize -->
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     />
     <!-- Custom styles  -->
     <link rel="stylesheet" href="./css/style.css" />
@@ -78,7 +78,6 @@
             </li>
           </ul>
           <!-- Section cards -->
-
           <ul class="list card-list">
             <li class="card-item">
               <a class="link card-link" href="">
@@ -107,12 +106,21 @@
             </li>
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-2.jpg"
-                  alt="Cashless"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-2.jpg"
+                    alt="Cashless"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">Cashless Payment</h3>
                   <p class="text-subtitle">Marketing</p>
@@ -121,12 +129,21 @@
             </li>
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-3.jpg"
-                  alt="Meditation"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-3.jpg"
+                    alt="Meditation"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">Meditation App</h3>
                   <p class="text-subtitle">App</p>
@@ -135,12 +152,21 @@
             </li>
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-4.jpg"
-                  alt="Taxi"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-4.jpg"
+                    alt="Taxi"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">Taxi Service</h3>
                   <p class="text-subtitle">Marketing</p>
@@ -149,12 +175,21 @@
             </li>
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">Screen Illustrations</h3>
                   <p class="text-subtitle">Design</p>
@@ -163,12 +198,21 @@
             </li>
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">Online Courses</h3>
                   <p class="text-subtitle">Marketing</p>
@@ -177,12 +221,21 @@
             </li>
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-7.jpg"
-                  alt="Instagram Stories"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-7.jpg"
+                    alt="Instagram Stories"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">
                     Instagram Stories Concept
@@ -193,12 +246,21 @@
             </li>
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">Organic Food</h3>
                   <p class="text-subtitle">Web Site</p>
@@ -207,12 +269,21 @@
             </li>
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">Fresh Coffee</h3>
                   <p class="text-subtitle">Web Site</p>
