--- a/index.html
+++ b/index.html
@@ -501,6 +501,23 @@
             </li>
           </ul>
         </div>
+        <div class="form-subscribe">
+          <p class="form-subscribe-undertext">Subscribe</p>
+          <label class="form-subscribe-email">
+            <input
+              type="email"
+              class="form-subscribe-input"
+              name="mail"
+              placeholder="E-mail"
+            />
+            <button class="btn form-subscribe-btn" type="submit">
+              Subscribe
+              <svg class="form-subscribe-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </label>
+        </div>
       </div>
     </footer>
 
