--- a/portfolio.html
+++ b/portfolio.html
@@ -351,6 +351,26 @@
             </li>
           </ul>
         </div>
+        <div class="form-subscribe">
+          <p class="form-subscribe-undertext">Subscribe</p>
+          <form class="subscribe-forms">
+            <label class="form-subscribe-email">
+              <input
+                type="email"
+                class="form-subscribe-input"
+                name="email"
+                placeholder="E-mail"
+                aria-label="email"
+              />
+              <button class="btn form-subscribe-btn" type="submit">
+                Subscribe
+                <svg class="form-subscribe-icon" width="24" height="20">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
