--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     />
     <!-- Custom styles  -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+    <link rel="stylesheet" href="./css/mobile.css" />
   </head>
   <body>
     <!-- Section Header -->
@@ -56,10 +57,10 @@
       </div>
     </header>
     <main>
-      <!-- Section filter buttons -->
-      <section class="section filter-card-section">
+      <!-- Section filter-card buttons -->
+      <!-- <section class="section filter-card-section">
         <div class="container">
-          <h2 hidden>filter-card</h2>
+          <h2 class="visually-hidden">filter-card</h2>
           <ul class="list filter-list">
             <li>
               <button class="btn filter-btn">All</button>
@@ -77,8 +78,7 @@
               <button class="btn filter-btn">Marketing</button>
             </li>
           </ul>
-          <!-- Section cards -->
-          <ul class="list card-list">
+           <ul class="list card-list">
             <li class="card-item">
               <a class="link card-link" href="">
                 <div class="card-box">
@@ -292,10 +292,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Section Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="text-wrap">
           <a class="link logo logo-footer" href="./index.html"
@@ -372,6 +372,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
