--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- Custom styles  -->
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
     <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
     <!-- Section Header -->
@@ -65,16 +67,16 @@
     </header>
     <main>
       <!-- Section Hero -->
-      <!-- <section class="hero-section section">
+      <section class="hero-section section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="btn hero-btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Section About -->
-      <!-- <section id="about" class="section about-section">
+      <section id="about" class="section about-section">
         <div class="container about-container">
           <h2 class="title visually-hidden">About company</h2>
           <ul class="list about-list">
@@ -128,7 +130,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section  What are we doing-->
       <!-- <section class="section">
         <div class="container doing-container">
