--- a/index.html
+++ b/index.html
@@ -132,48 +132,62 @@
         </div>
       </section>
       <!-- Section  What are we doing-->
-      <!-- <section class="section">
+      <section class="section-doing">
         <div class="container doing-container">
           <h2 class="title doing-title">What are we doing</h2>
           <ul class="list doing-list">
             <li class="doing-item">
               <img
-                src="./images/doing/img-1.jpg"
+                srcset="
+                  ./images/doing/img-1@1x.jpg 1x,
+                  ./images/doing/img-1@2x.jpg 2x
+                "
+                src="./images/doing/img-1@1x.jpg"
                 alt="macmini"
                 width="360"
                 height="300"
+                loading="lazy"
               />
             </li>
             <li class="doing-item">
               <img
-                src="./images/doing/img-2.jpg"
+                srcset="
+                  ./images/doing/img-2@1x.jpg 1x,
+                  ./images/doing/img-2@2x.jpg 2x
+                "
+                src="./images/doing/img-2@1x.jpg"
                 alt="phones"
                 width="360"
                 height="300"
+                loading="lazy"
               />
             </li>
             <li class="doing-item">
               <img
-                src="./images/doing/img-3.jpg"
+              srcset="./images/doing/img-3@1x.jpg 1x, ./images/doing/img-3@2x.jpg 2x"
+                src="./images/doing/img-3@1x.jpg"
                 alt="tablet"
                 width="360"
                 height="300"
+                loading="lazy"
               />
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section Our Team -->
-      <!-- <section class="team-section section">
-        <div class="container">
+      <section class="team-section section">
+        <div class="container team-container">
           <h2 class="title team-title">Our Team</h2>
           <ul class="list team-list">
             <li class="team-item">
               <img
-                src="./images/team/img-1.jpg"
+                srcset="./images/team/img-1@1x.jpg 1x, ./images/team/img-1@2x.jpg 2x"
+                src="./images/team/img-1@1x.jpg"
                 alt="product-designer"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-script">
                 <h3 class="subtitle team-subtitle">Mark Guerrero</h3>
@@ -221,10 +235,12 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/img-2.jpg"
+              srcset="./images/team/img-2@1x.jpg 1x, ./images/team/img-2@2x.jpg 2x"
+                src="./images/team/img-2@1x.jpg"
                 alt="developer"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-script">
                 <h3 class="subtitle team-subtitle">Tom Ford</h3>
@@ -272,10 +288,12 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/img-3.jpg"
+              srcset="./images/team/img-3@1x.jpg 1x, ./images/team/img-3@2x.jpg 2x"
+                src="./images/team/img-3@1x.jpg"
                 alt="marketing"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-script">
                 <h3 class="subtitle team-subtitle">Camila Garcia</h3>
@@ -323,10 +341,12 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/img-4.jpg"
+              srcset="./images/team/img-4@1x.jpg 1x, ./images/team/img-4@2x.jpg 2x"
+                src="./images/team/img-4@1x.jpg"
                 alt="ui-designer"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="team-script">
                 <h3 class="subtitle team-subtitle">Daniel Wilson</h3>
@@ -374,7 +394,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section Customers -->
       <!-- <section class="section customer-section">
         <div class="container">
