--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         </div>
       </section>
       <!-- Section Customers -->
-      <!-- <section class="section customer-section">
+      <section class="section customer-section">
         <div class="container">
           <h2 class="title customer-title">Customers</h2>
           <ul class="list customer-list">
@@ -474,7 +474,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Section Footer -->
     <!-- <footer class="footer">
