Wittout mobal menu

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       </section>
       <!-- Section Customers -->
       <section class="section customer-section">
-        <div class="container">
+        <div class="container customer-container">
           <h2 class="title customer-title">Customers</h2>
           <ul class="list customer-list">
             <li class="customer-item">
@@ -477,7 +477,7 @@
       </section>
     </main>
     <!-- Section Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="text-wrap">
           <a class="link logo logo-footer" href="./index.html"
@@ -554,10 +554,10 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal windows -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
@@ -635,7 +635,7 @@
           <button class="btn form-action-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!-- Mobile menu -->
 
